apps/jellyfin/jellyfin-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/part-of: day2-services
  annotations:
    argocd.argoproj.io/sync-wave: "0"
