apps/jellyfin/jellyfin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
    app.kubernetes.io/name: jellyfin
    argocd.argoproj.io/managed-by: argocd
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
  - name: http
    port: 8096
    targetPort: 8096
    protocol: TCP
